--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ hs_err_pid*
 /JJ Project Restaurant/Team10_ProjectClient/nbproject/private/
 /JJ Project Restaurant/Team10_ProjectClient/build/
 /JJ Project Restaurant/Team10_ProjectClient/dist/
+/JJ Project Restaurant/Team10_Project/dist/
