Add entity class and database connection to the project

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,7 @@ hs_err_pid*
 /JJ Project Restaurant/Team10_ProjectClient/build/
 /JJ Project Restaurant/Team10_ProjectClient/dist/
 /JJ Project Restaurant/Team10_Project/dist/
+/JJ Project Restaurant/JavaApplication7/nbproject/private/
+/JJ Project Restaurant/TestServer/nbproject/private/
+/JJ Project Restaurant/TestServer/build/
+/JJ Project Restaurant/TestServerClient/nbproject/private/
