This is with the Spring framework on

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ hs_err_pid*
 /JJ Project Restaurant/TestServer/nbproject/private/
 /JJ Project Restaurant/TestServer/build/
 /JJ Project Restaurant/TestServerClient/nbproject/private/
+/JJ Project Restaurant/WebApplication1/nbproject/private/
+/JJ Project Restaurant/JavaApplication8/nbproject/private/
+/JJ Project Restaurant/WebApplication1/build/
+/JJ Project Restaurant/WebApplication1/dist/
