remove test files

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ hs_err_pid*
 /JJ Project Restaurant/JavaApplication8/nbproject/private/
 /JJ Project Restaurant/WebApplication1/build/
 /JJ Project Restaurant/WebApplication1/dist/
+/JJ Project Restaurant/TestServer1/nbproject/private/
+/JJ Project Restaurant/TestServer1/build/
+/JJ Project Restaurant/testclient2/nbproject/private/
