--- a/JJ Project Restaurant/testclient2/nbproject/project.properties
+++ b/JJ Project Restaurant/testclient2/nbproject/project.properties
@@ -24,14 +24,12 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/JavaApplication8.jar
+dist.jar=${dist.dir}/testclient2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${libs.restapi.classpath}:\
-    ${libs.restlib.classpath}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=javaapplication8.JavaApplication8
+main.class=testclient2.Testclient2
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
