--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,7 @@ hs_err_pid*
 /JJ Project Restaurant/TestServer1/nbproject/private/
 /JJ Project Restaurant/TestServer1/build/
 /JJ Project Restaurant/testclient2/nbproject/private/
+/JJ Project Restaurant/JavaFXApplication1/nbproject/private/
+/JJ Project Restaurant/TTTWebApplication/nbproject/private/
+/JJ Project Restaurant/TTTWebApplication/build/
+/JJ Project Restaurant/TTTWebApplication/dist/
