Create reservation working

--- a/simplication/Team10_Project2.0/nbproject/project.properties
+++ b/simplication/Team10_Project2.0/nbproject/project.properties
@@ -30,12 +30,16 @@ dist.jar=${dist.dir}/Team10_Project2.0.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.derby.jar=C:\\Program Files\\glassfish-4.1.1\\javadb\\lib\\derby.jar
+file.reference.derbyclient.jar=C:\\Program Files\\glassfish-4.1.1\\javadb\\lib\\derbyclient.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.eclipselink.classpath}:\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.derbyclient.jar}:\
+    ${file.reference.derby.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
