--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ hs_err_pid*
 /JJ Project Restaurant/TTTWebApplication/build/
 /JJ Project Restaurant/TTTWebApplication/dist/
 *.properties
+/simplication/Team10_Project2.0/dist/
