Creating new package "lib"

--- a/simplication/Team10_Project2.0/nbproject/project.properties
+++ b/simplication/Team10_Project2.0/nbproject/project.properties
@@ -32,8 +32,7 @@ endorsed.classpath=
 excludes=
 file.reference.derby.jar=C:\\Program Files\\glassfish-4.1.1\\javadb\\lib\\derby.jar
 file.reference.derbyclient.jar=C:\\Program Files\\glassfish-4.1.1\\javadb\\lib\\derbyclient.jar
-file.reference.jcalendar-1.4.jar=C:\\Users\\Jakub\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-1=jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar=src/lib/jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -42,8 +41,7 @@ javac.classpath=\
     ${libs.beans-binding.classpath}:\
     ${file.reference.derbyclient.jar}:\
     ${file.reference.derby.jar}:\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.jcalendar-1.4.jar-1}
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
