Free tables in progress

--- a/simplication/Team10_Project2.0/nbproject/project.properties
+++ b/simplication/Team10_Project2.0/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.jar=${dist.dir}/Team10_Project2.0.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.com.mysql.jdbc_5.1.5.jar=src/lib/com.mysql.jdbc_5.1.5.jar
 file.reference.derby.jar=C:\\Program Files\\glassfish-4.1.1\\javadb\\lib\\derby.jar
 file.reference.derbyclient.jar=C:\\Program Files\\glassfish-4.1.1\\javadb\\lib\\derbyclient.jar
 file.reference.jcalendar-1.4.jar=src/lib/jcalendar-1.4.jar
@@ -37,7 +38,7 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.eclipselink.classpath}:\
-    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.com.mysql.jdbc_5.1.5.jar}:\
     ${libs.beans-binding.classpath}:\
     ${file.reference.derbyclient.jar}:\
     ${file.reference.derby.jar}:\
