staff profile view and controller with fixed delete booking

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ hs_err_pid*
 /simplication/Team10_Project/nbproject/private/
 /simplication/Team10_Project/build/
 /simplication/Team10_Project/dist/
+simplication/Team10_Project2.0/build/built-jar.properties
