getting ready for interview

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@ hs_err_pid*
 /simplication/Team10_Project/nbproject/private/
 /simplication/Team10_Project/build/
 /simplication/Team10_Project/dist/
+/simplication/code/Team10_Project2.0/build/
+/simplication/code/Team10_Project2.0/nbproject/private/
